force-app/main/default/objects/Knowledge__kav/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <inlineHelpText>Indique qué información se proporciona en los artículos básicos. Puede crear campos adicionales para estructurar más el contenido de los artículos.</inlineHelpText>
    <label>Contenido</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>