force-app/main/default/objects/Knowledge__kav/fields/DigitalEngagementResponse__c.field-meta.xml
<CustomField>
    <fullName>DigitalEngagementResponse__c</fullName>
    <inlineHelpText>Proporcione una respuesta corta para canales de participación digital, como Chat, Mensajería, Redes sociales y Bots.</inlineHelpText>
    <label>Respuesta de participación digital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>