force-app/main/default/objects/Knowledge__kav/fields/InternalNotes__c.field-meta.xml
<CustomField>
    <fullName>InternalNotes__c</fullName>
    <inlineHelpText>Proporcione notas internas. Las notas solo son visibles para los perfiles de usuarios internos específicos y no se comparten con perfiles de usuarios externos cuando el artículo se comparte externamente.</inlineHelpText>
    <label>Notas internas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>