force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Describa la pregunta o problema que responde este artículo.</inlineHelpText>
    <label>Pregunta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>